# oscal-risk-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
aws/: README.md  sample-event.json  sample-lambda-env.json
docs/: aggregation-method.md  architecture.md  demo-walkthrough.md  inputs-and-outputs.md  linkedin-follow-up.md  nist-csf-alignment.md  oscal-format-notes.md  portfolio-brief.md
examples/: oscal-assessment-results.json  risk-context.answers.json  risk-register.sample.csv  risk-register.sample.html  risk-register.sample.json  risk-register.sample.md
mappings/: risk-context-questions.json  risk-scenarios.json
src/oscal_risk_bridge/: __init__.py  cli.py  context.py  engine.py  exporters.py  lambda_handler.py  mapping.py  models.py  oscal.py  validation.py
src/oscal_risk_bridge/assets/: __init__.py
tests/: test_engine.py  test_exporters.py  test_oscal.py  test_validation.py
